--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PuppyPedia">
-        <activity android:name=".ui.main.ui.home.HomeActivity"></activity>
+        <activity android:name=".ui.main.ui.notification.NotificationActivity"></activity>
+        <activity android:name=".ui.main.ui.home.HomeActivity" />
         <activity android:name=".ui.auth.forgotpassword.ForgotPasswordActivity" />
         <activity android:name=".ui.auth.signup.SignUpActivity" />
         <activity android:name=".ui.auth.login.LoginActivity" />
