--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'kotlin-android-extensions'
 }
 
 android {
@@ -64,5 +65,9 @@ dependencies {
     implementation 'com.yanzhenjie:album:2.1.3'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 
+    //indicator
+    implementation "ru.tinkoff.scrollingpagerindicator:scrollingpagerindicator:1.2.1"
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 }
