--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,10 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    //calender
+    implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'
+
+    //Graph
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
 }
