--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,13 +6,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.puppypedia"
         minSdkVersion 23
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
@@ -47,7 +47,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
@@ -70,12 +70,12 @@ dependencies {
     //indicator
     implementation "ru.tinkoff.scrollingpagerindicator:scrollingpagerindicator:1.2.1"
 
+    //Circular ImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-
-    //calender
-    implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'
 
     //Graph
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
+    //Calendar
+    implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'
 }
