--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.PuppyPedia">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".ui.main.ui.add_weight.AddWeightActivity"
             android:exported="true" />
@@ -34,7 +34,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.main.ui.editprofile.EditProfileActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            />
         <activity
             android:name=".ui.main.ui.profile.ProfileActivity"
             android:screenOrientation="portrait" />
