--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,24 +1,19 @@
-plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
-    id 'kotlin-kapt'
-
-}
-
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'kotlin-android-extensions'
 android {
-    compileSdkVersion 31
+    compileSdkVersion 30
     buildToolsVersion "30.0.3"
-
     defaultConfig {
         applicationId "com.puppypedia"
         minSdkVersion 23
-        targetSdkVersion 31
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
     buildTypes {
         release {
             minifyEnabled false
@@ -30,17 +25,15 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
     buildFeatures {
         viewBinding true
         dataBinding true
     }
-
 }
 
 dependencies {
-
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
@@ -50,32 +43,51 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
+    implementation 'androidx.core:core:1.5.0-alpha02'
+    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
+    //noinspection GradleDependency
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0"
     //ktx
     implementation "androidx.activity:activity-ktx:1.3.1"
     implementation "androidx.fragment:fragment-ktx:1.3.6"
-
     //dimens
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
-
     //roundedImageView
     implementation 'com.makeramen:roundedimageview:2.3.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-
-
     //upload image
     implementation 'com.yanzhenjie:album:2.1.3'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-
     //indicator
     implementation "ru.tinkoff.scrollingpagerindicator:scrollingpagerindicator:1.2.1"
-
     //Circular ImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-
     //Graph
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
-
     //Calendar
     implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'
+    //Retrofit
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    //custom alert
+    implementation 'com.tapadoo.android:alerter:6.1.0'
+    implementation 'com.valdesekamdem.library:md-toast:0.9.0'
+    //rx android scheduler
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    //firebase analytics
+    implementation 'com.google.firebase:firebase-analytics:19.0.1'
+    implementation 'com.google.firebase:firebase-messaging:22.0.0'
+    implementation 'com.google.firebase:firebase-crashlytics:18.2.1'
+//lottie
+    implementation 'com.airbnb.android:lottie:3.0.6'
+    implementation 'com.zxy.android:tiny:1.1.0'
+
+
+}
+repositories {
+    mavenCentral()
 }
