--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.main.ui.home.HomeActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan|stateAlwaysHidden" />
         <activity
             android:name=".ui.auth.forgotpassword.ForgotPasswordActivity"
             android:screenOrientation="portrait" />
