--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,15 +80,16 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    //firebase analytics
-    implementation 'com.google.firebase:firebase-analytics:19.0.1'
-    implementation 'com.google.firebase:firebase-messaging:22.0.0'
 //lottie
     implementation 'com.airbnb.android:lottie:3.0.6'
     implementation 'com.zxy.android:tiny:1.1.0'
 
+
     implementation platform('com.google.firebase:firebase-bom:28.4.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-messaging-ktx'
+
+
 
 }
 repositories {
