--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <application
         android:allowBackup="true"
@@ -18,65 +21,85 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".ui.main.ui.add_weight.AddWeightActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
             android:exported="true" />
         <activity
             android:name=".ui.main.ui.category.CategoryActivity"
-            android:exported="true" />
-        <activity android:name=".ui.main.ui.weight_chart.WeightChartActivity" />
+            android:exported="true"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.main.ui.weight_chart.WeightChartActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.main.ui.addremainder.AddRemainderActivity"
             android:windowSoftInputMode="adjustPan|stateAlwaysHidden"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.main.ui.category_detail.CategoryDetailActivity"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.main.ui.about_us.AboutUsActivity"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.main.ui.changepassword.ChangePasswordActivity"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.main.ui.editprofile.EditProfileActivity"
             android:screenOrientation="portrait"
+            android:launchMode="singleTop"
             />
         <activity
             android:name=".ui.main.ui.profile.ProfileActivity"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.main.ui.petdetail.YourPetDetailActivity"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.main.ui.notification.NotificationActivity"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.main.ui.home.HomeActivity"
             android:screenOrientation="portrait"
+            android:launchMode="singleTop"
             android:windowSoftInputMode="adjustPan|stateAlwaysHidden" />
         <activity
             android:name=".ui.auth.forgotpassword.ForgotPasswordActivity"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.auth.signup.SignUpActivity"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.auth.login.LoginActivity"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.main.SplashActivity"
             android:exported="true"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".ui.main.ui.editpetprofile.EditPetProfileActivity"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.main.ui.mypetprofile.MyPetProfileActivity"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait" />
 
 
@@ -101,6 +124,14 @@ Set color used with incoming notification messages. This is used when no color i
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
+
+        <service
+            android:name="com.puppypedia.fcm.MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
