--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,22 +8,23 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.VIBRATE" />
+
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <application
+        android:name=".utils.helper.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".utils.helper.MyApplication"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".ui.main.ui.add_weight.AddWeightActivity"
+            android:exported="true"
             android:launchMode="singleTop"
-            android:screenOrientation="portrait"
-            android:exported="true" />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.main.ui.category.CategoryActivity"
             android:exported="true"
@@ -34,9 +35,9 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.main.ui.addremainder.AddRemainderActivity"
-            android:windowSoftInputMode="adjustPan|stateAlwaysHidden"
             android:launchMode="singleTop"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan|stateAlwaysHidden" />
         <activity
             android:name=".ui.main.ui.category_detail.CategoryDetailActivity"
             android:launchMode="singleTop"
@@ -51,9 +52,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.main.ui.editprofile.EditProfileActivity"
-            android:screenOrientation="portrait"
             android:launchMode="singleTop"
-            />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.main.ui.profile.ProfileActivity"
             android:launchMode="singleTop"
@@ -68,8 +68,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.main.ui.home.HomeActivity"
-            android:screenOrientation="portrait"
             android:launchMode="singleTop"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan|stateAlwaysHidden" />
         <activity
             android:name=".ui.auth.forgotpassword.ForgotPasswordActivity"
