--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,15 +11,27 @@ android {
         applicationId "com.puppypedia"
         minSdkVersion 23
         targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
-
+        versionCode 2
+        versionName "1.2"
+        ndk {
+            abiFilters  "armeabi-v7a", "arm64-v8a"
+        }
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    splits {
+        abi {
+            enable false
+            reset()
+            include 'x86', 'armeabi-v7a'
+            universalApk true
+        }    }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        lintOptions {
+            abortOnError false
         }
     }
     compileOptions {
