--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name=".ui.main.ui.add_record.AddRecordActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
             android:exported="true" />
         <activity
             android:name=".ui.main.ui.add_weight.AddWeightActivity"
