--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,6 +101,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-messaging-ktx'
 
+    //Image compress
+    implementation 'id.zelory:compressor:2.1.1'
+
 }
 repositories {
     mavenCentral()
