--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,9 +13,9 @@ android {
         targetSdkVersion 30
         versionCode 2
         versionName "1.2"
-        ndk {
-            abiFilters  "armeabi-v7a", "arm64-v8a"
-        }
+//        ndk {
+//            abiFilters  "armeabi-v7a", "arm64-v8a"
+//        }
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     splits {
