reminder with work manager

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,6 +113,10 @@ dependencies {
     //swipe layout
     implementation "com.daimajia.swipelayout:library:1.2.0@aar"
 
+    // work manager
+    implementation 'androidx.work:work-runtime:2.1.0-alpha02'
+
+
 }
 repositories {
     mavenCentral()
