--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
+
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <application
@@ -23,10 +24,13 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ui.main.ui.addhealthproblem.AddHealthProblemActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.main.ui.add_record.AddRecordActivity"
+            android:exported="true"
             android:launchMode="singleTop"
-            android:screenOrientation="portrait"
-            android:exported="true" />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.main.ui.add_weight.AddWeightActivity"
             android:exported="true"
@@ -137,7 +141,6 @@ Set color used with incoming notification messages. This is used when no color i
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
     </application>
 
 </manifest>
