--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".ui.main.ui.addhealthproblem.AddHealthDetails"></activity>
         <activity
             android:name=".ui.main.ui.addhealthproblem.AddHealthProblemActivity"
             android:exported="false" />
