--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,14 +16,15 @@
     <application
         android:name=".utils.helper.MyApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/puppypediamain"
         android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/puppypediamain"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.main.ui.addhealthproblem.AddHealthDetails"></activity>
+        <activity android:name=".ui.fragments.profile.LifeEventDetailActivity"/>
+        <activity android:name=".ui.main.ui.addhealthproblem.AddHealthDetails" />
         <activity
             android:name=".ui.main.ui.addhealthproblem.AddHealthProblemActivity"
             android:exported="false" />
