--- a/app/build.gradle
+++ b/app/build.gradle
@@ -132,6 +132,9 @@ dependencies {
 
     // use this library for zoom function on image.
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
+    //jsoup html parsing
+    implementation 'org.jsoup:jsoup:1.14.3'
+
 
 }
 repositories {
